jumping to article based on timestamp, fixed thumbnails of futurists

--- a/sass/_the-team.scss
+++ b/sass/_the-team.scss
@@ -84,67 +84,67 @@
   .thumbnail {
     background-size: 700% auto;
     &.ted {
-      background-position: 0 -44px;
+      background-position: 0 -40px;
     }
     &.tiana {
-      background-position: -258px -44px;
+      background-position: -228px -40px;
     }
     &.kathleen {
-      background-position: -522px -44px;
+      background-position: -452px -40px;
     }
     &.kate {
-      background-position: -782px -44px;
+      background-position: -672px -40px;
     }
     &.billie {
-      background-position: -1030px -44px;
+      background-position: -890px -40px;
     }
     &.ron {
-      background-position: -5px -321px;
+      background-position: -5px -271px;
     }
     &.nyla {
-      background-position: -267px -321px;
+      background-position: -227px -271px;
     }
     &.janet {
-      background-position: -524px -321px;
+      background-position: -454px -271px;
     }
     &.pamela {
-      background-position: -792px -321px;
+      background-position: -682px -271px;
     }
     &.michele {
-      background-position: -1030px -321px;
+      background-position: -885px -271px;
     }
     &.marc {
-      background-position: -20px -609px;
+      background-position: -20px -524px;
     }
     &.clare {
-      background-position: -260px -609px;
+      background-position: -230px -524px;
     }
     &.luke {
-      background-position: -520px -609px;
+      background-position: -450px -524px;
     }
     &.phoebe {
-      background-position: -779px -609px;
+      background-position: -669px -524px;
     }
     &.andy {
-      background-position: -1030px -609px;
+      background-position: -885px -524px;
     }
     &.lynda {
-      background-position: -5px -900px;
+      background-position: -5px -770px;
     }
     &.ali {
-      background-position: -267px -900px;
+      background-position: -227px -770px;
     }
     &.anthony {
-      background-position: -780px -900px;
+      background-position: -670px -770px;
     }
     &.stephanie {
-      background-position: -10px -1190px;
+      background-position: -10px -1020px;
     }
     &.marykay {
-      background-position: -258px -1190px;
+      background-position: -228px -1020px;
     }
     &.megan {
-      background-position: -520px -1190px;
+      background-position: -450px -1020px;
     }
   }
 }
